tests/sources/invalid/match/match_wildcard_not_last.fire
// Invalid: a wildcard '_' arm must be the last arm.
// EXPECT: semantic error

enum Shape {
    Circle(radius: float64),
    Point
}

s: Shape = Shape.Point;
match s {
    _ -> { }
    Shape.Point -> { }  //~ ERROR FS-SEM-0001 @5
}
